# chatgpt-pro

./: .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  LICENSE  commitlint.config.js  docker-compose-dev.yaml  docker-compose-replica.yaml  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-push.yml  commit-lint.yml  commitlint.yml  deployment.yml  linting.yml  remove-branch.yaml  unit-test-chat-service.yml  unit-test-ocr-service.yml  unit-test.yml
backend/chat-service/: .eslintrc.js  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/chat-service/src/: app.module.ts  main.ts
backend/chat-service/test/: jest-e2e.json
backend/code-interpreter-service/: .gitignore  pyproject.toml
backend/code-interpreter-service/code-interpreter-service/: main.py
backend/code-interpreter-service/server/: main.py
backend/ocr-service/: .gitignore  nest-cli.json  package-lock.json  package.json
backend/ocr-service/src/: app.module.ts  main.ts
deployment/: docker-compose.yaml
frontend/: .env  .eslintrc  .prettierrc  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.css  index.jsx
frontend/src/components/: ChatInput.jsx  ChatSection.jsx  CopyCode.jsx  InputBox.jsx  Loading.jsx  LoginCard.jsx  Markdown.jsx  Message.jsx  ModelConfiguratorDialog.jsx  ModelDropDown.jsx  Nav.jsx  SettingsMenu.jsx  SideBar.jsx  SyntaxHighlighter.jsx  (+3 more)
(+80 files in other folders)
